--- a/register.html
+++ b/register.html
@@ -5,14 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <link rel="stylesheet" href="./css/register.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.24/sweetalert2.all.js"></script>
-
   </head>
   <body>
     <div class="backgroundContainer">
@@ -36,43 +49,6 @@
         <div class="row top_border loginContainer" id="login">
           <div class="col">
             <form id="reg">
-              <!-- <div class="row mb-3">
-                <div class="col-md-6">
-                  <label for="fname" class="form-label"> First Name </label>
-                  <div class="input-group flex-nowrap">
-                    <span class="input-group-text" id="addon-wrapping"
-                      ><img src="./assets/person.svg" width="25" />
-                    </span>
-                    <input
-                      name="fname"
-                      type="text"
-                      class="form-control"
-                      placeholder="Enter your First Name"
-                      aria-label="Username"
-                      aria-describedby="addon-wrapping"
-                      autocomplete="off"
-                    />
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <label for="lname" class="form-label"> Last Name </label>
-                  <div class="input-group flex-nowrap">
-                    <span class="input-group-text" id="addon-wrapping"
-                      ><img src="./assets/person.svg" width="25" />
-                    </span>
-                    <input
-                      name="lname"
-                      type="text"
-                      class="form-control"
-                      placeholder="Enter your Last Name"
-                      aria-label="Username"
-                      aria-describedby="addon-wrapping"
-                      autocomplete="off"
-                    />
-                  </div>
-                </div>
-              </div> -->
-
               <div class="row mb-3">
                 <div class="col-md-12">
                   <label for="email" class="form-label"> Email </label>
@@ -91,64 +67,7 @@
                     />
                   </div>
                 </div>
-                <!-- <div class="col-md-6">
-                  <label for="dob" class="form-label">Date of Birth</label>
-                  <input
-                    name="dob"
-                    type="date"
-                    class="form-control"
-                    id="dob"
-                    name="dob"
-                  />
-                </div> -->
               </div>
-
-                <!-- <div class="col-md-6">
-                  <label for="username" class="form-label"> Image </label>
-                  <input
-                    name="image"
-                    class="form-control"
-                    type="file"
-                    id="formFile"
-                  />
-                </div>
-                <div class="col-md-6">
-                  <label for="phone" class="form-label"> Phone Number </label>
-                  <div class="input-group flex-nowrap">
-                    <span class="input-group-text" id="addon-wrapping"
-                      ><img src="phone.svg" width="25" />
-                    </span>
-                    <input
-                      name="phone"
-                      type="text"
-                      class="form-control"
-                      placeholder="Enter your Phone Number"
-                      aria-label="Username"
-                      aria-describedby="addon-wrapping"
-                      autocomplete="off"
-                    />
-                  </div>
-                </div>
-              </div> -->
-
-              <!-- <div class="row mb-3">
-                <div class="col-md-12">
-                  <label for="contact" class="form-label">
-                    Contact Details</label
-                  >
-                  <textarea
-                    autocomplete="off"
-                    name="contact"
-                    style="resize: none"
-                    type="textarea"
-                    class="form-control"
-                    id="contact"
-                    name="contact"
-                    placeholder="Enter your contact details"
-                  ></textarea>
-                </div>
-              </div> -->
-
               <div class="row mb-3">
                 <div class="col-md-12">
                   <label for="password" class="form-label">Password</label>
@@ -168,6 +87,7 @@
                       placeholder="Enter your Password"
                       aria-label="Password"
                       aria-describedby="addon-wrapping"
+                      autocomplete="off"
                     />
                     <span class="input-group-text" id="login-visibility-toggle">
                       <span
@@ -191,10 +111,8 @@
                     </span>
                   </div>
                 </div>
-                
               </div>
               <div class="row mb-3">
-                
                 <div class="col-md-12">
                   <label for="Confirmpassword" class="form-label"
                     >Confirm Password</label
@@ -215,6 +133,7 @@
                       placeholder="Confirm your Password"
                       aria-label="Password"
                       aria-describedby="addon-wrapping"
+                      autocomplete="off"
                     />
                   </div>
                 </div>
@@ -231,14 +150,13 @@
                   >
                 </div>
               </div>
-
-              <div id="errorMessage" class="alert alert-warning d-none"></div>
-              <button type="submit" class="loginBtn">REGISTER</button>
+              <button type="submit" class="loginBtn" id="registertxt">REGISTER</button>
             </form>
           </div>
         </div>
       </div>
     </div>
+    <div id="errorMessage" class="alert alert-warning d-none"></div>
     <script src="./js/register.js"></script>
   </body>
 </html>
