--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header>
-      <p>Profile Page</p>
+      Profile Page
       <button id="logoutButton">LOGOUT</button>
     </header>
     <section class="py-5 my-5 profileContainer">
