--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
                     name="email"
                     type="email"
                     class="form-control"
-                    placeholder="Enter your Eamil..."
+                    placeholder="Enter your Email..."
                     aria-label="Username"
                     aria-describedby="addon-wrapping"
                   />
